--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 altair==4.2.0
 folium==0.12.1.post1
 pymannkendall==1.4.2
-streamlit==1.8.1
+streamlit==1.11.1
 streamlit-aggrid==0.2.3.post2
 streamlit-folium==0.6.4
 streamlit-lottie==0.0.3
 s3fs==2022.7.1
+protobuf==3.20.0
